--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,42 @@
+/* @override http://192.168.1.250:9393/css/style.css */
+
+/* @group reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0; padding: 0; border: 0;outline: 0;
+	font-size: 100%; vertical-align: baseline;
+	background: transparent;
+}
+body { line-height: 1; }
+ol, ul { list-style: none; }
+blockquote, q { quotes: none; }
+blockquote:before, blockquote:after,
+q:before, q:after { content: ''; /*content: none;*/ }
+:focus { outline: 0; }
+ins { text-decoration: none; }
+del { text-decoration: line-through; }
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* @end */
+
+
 #container 
 {
 	width: 850px;
 	font-family: "Lucida Grande", Tahoma;
-	font-size: 11px;
+	font-size: 12px;
 	border: 1px solid #CCCCCC;
+	position: relative;
+	top: 20px;
 }
 
 #stuff
@@ -34,15 +67,16 @@
 {
 	width: 850px;
 	height: 78px;
-	background-image: url(/images/header.png);
+	background-image: url(/images/header.jpg);
 }
 
 .title3
 {
-	font-size: 16px;
 	color: #00CC33;
-	padding: 29px;
 	opacity: 1;
+	text-align: left;
+	font: bold 25px Courier;
+	padding: 25px;
 }
 
 
@@ -57,15 +91,11 @@
 
 #navbar
 {
-	width: 850px;
-	margin-left: 0px;
-	margin-right: 0px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
-	padding-bottom: 10px;
 	text-decoration: none;
 	color: #000000;
+	border-bottom: 1px solid #a9a9a9;
+	padding: 10px;
+	margin: 0;
 }	
 
 #navbar a:link, a:active
@@ -105,12 +135,64 @@
 	padding-bottom: 10px;
 	text-decoration: none;
 	color: #333333;
-	/* background-color: #66FFFF; */
 	background-image: url(/images/on.png);
 	margin-bottom: -1px;
 	border-bottom: 0px;
 }
 
+#navbar a {
+}
+
+li {
+	/*list-style: italic;*/
+	margin: 5px 0;
+	padding:10px;
+	background: #a2ff28;
+	border: 1px solid #3b3f4b;
+	list-style-type: none;
+	display: block;
+}
+
+#server_list li{
+	height: 35px;
+	font-size: 15px;
+}
+
+#server_list li.on {
+	background-color: #a2ff28;
+}
+#server_list li.off {
+	background-color: #fd0217;
+}
+#server_list li.na {
+	background-color: #52a7fc;
+}
+
+#server_list li ul li {
+	display: inline-block;
+	padding: 0 8px 0 0;
+	border-style: none;
+	background: transparent;
+	font-size: 12px;
+}
+
+#server_list li ul {
+	height: 25px;
+	padding-left: 30px;
+}
+
+#server_list li li.btns {
+	display: inline;
+	position: relative;
+	float: right;
+	top: -10px;
+}
+
+#btn_manage {
+	font-size: 16px;
+	padding: 5px;
+	background-color: #faff2d;
+}
 
 
 /* @end */
@@ -145,7 +227,7 @@
 	border-bottom: 1px solid #CCCCCC;
 	color: #333333;
 	text-decoration: none;
-	background-color: #33FFFF;
+	/*background-color: #33FFFF;*/
 	margin-bottom: -1px;
 }
 
@@ -197,7 +279,7 @@
 	border: 1px solid #6593CF;
 	margin: 0px;
 	padding: 3px;
-	font-size: 11px;
+	font-size: 12px;
 }
 
 .notbutton
@@ -206,12 +288,12 @@
 	border: 1px solid #6593CF;
 	margin: 0px;
 	padding: 3px;
-	font-size: 11px;
+	font-size: 12px;
 }
 
 .notbutton a:link, a:hover, a:visited, a:active
 {
-	font-size: 11px;
+	font-size: 12px;
 	margin: 0px;
 	padding: 0px;
 	border-bottom: 0px none #FFF;
