--- a/auth_views/signup.haml
+++ b/auth_views/signup.haml
@@ -1,8 +1,11 @@
-%h1 This view is overridden
 #sinatra_authentication
   #sinatra_authentication_flash= flash[:notice]
   %h1.page_title Signup
   %form{:action => "/signup", :method => "post"}
+    .field
+      .label
+        %label{:for => "user_name"} Name
+      %input{ :id => "user_name", :name => "user[name]", :size => 30, :type => "text" }
     .field
       .label
         %label{:for => "user_email"} Email
