--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,46 +105,27 @@ p {
 	margin: 0;
 }	
 
-#navbar a:link, a:active
+#navbar a:link/*, #navbar a:active*/
 {
 	margin-left: 0px;
 	margin-right: 0px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 6px;
-	padding-bottom: 6px;
 	text-decoration: none;
-	/* border-bottom: 1px #CCCCCC solid; */
+	 /*border-bottom: 1px #CCCCCC solid;*/ 
 	color: #000000;
 	border-bottom: 0px;
-}	
-
-#navbar a:visited
-{	
-	margin-left: 0px;
-	margin-right: 0px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-decoration: none;
-	color: #000000;
-	/*border-bottom: 0px;*/
-}	
+	padding: 6px 10px;
+}
 
 #navbar a:hover
 {	
 	margin-left: 0px;
 	margin-right: 0px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
-	padding-bottom: 10px;
 	text-decoration: none;
 	color: #333333;
-	background-image: url(/images/on.png);
-	margin-bottom: -1px;
-	/*border-bottom: 0px;*/
+	background-image: url(/images/off2.png);
+
+	background-color: orange;
+	padding: 10px;
 }
 
 #navbar a {
@@ -253,11 +234,6 @@ li {
 	height: 15px;
 }
 
-#btn_manage {
-	font-size: 16px;
-	padding: 5px;
-	background-color: #faff2d;
-}
 #server_list li.managed {
 	border-width: 3px;
 	border-color: #7fd4fd;
@@ -271,8 +247,31 @@ li {
 	display: inline-block;
 }
 .btn {
+/*
 	text-align: center;
-	border: 1px solid #d5d5d5;
+	font-size: 16px;
+	padding: 5px;
+	background-color: #faff2d;
+	font-size: 16px;
+	padding: 5px;
+
+	background-color: orange;
+	background: url(/images/button.PNG);
+	border: 1px solid #a9a9a9;
+	margin: 0px;
+	padding: 3px;
+	font-size: 12px;
+	color: #424242;
+	text-decoration: none;
+*/
+	background-color: orange;
+	background: url(/images/button.PNG);
+	border: 1px solid #a9a9a9;
+	margin: 0px;
+	padding: 3px;
+	font-size: 16px;
+	color: #424242;
+	text-decoration: none;
 }
 /* @end */
 
@@ -287,7 +286,7 @@ li {
 	padding: 10px;
 }	
 
-#footer a:link, a:visited, a:active
+#footer a:link, #footer a:visited, #footer a:active
 {
 	margin-bottom: 2px;
 	border-bottom: 1px dotted #CCCCCC; 
@@ -335,7 +334,7 @@ li {
 	font-size: 12px;
 }
 
-.notbutton a:link, a:hover, a:visited, a:active
+.notbutton a:link, .notbutton a:hover, .notbutton a:visited, .notbutton a:active
 {
 	font-size: 12px;
 	margin: 0px;
