--- a/views/_footer.haml
+++ b/views/_footer.haml
@@ -1,2 +1,2 @@
 %div{:align => "center"}
-  OS: #{running_os} | Ruby: #{RUBY_VERSION} | Sinatra: #{Sinatra::VERSION} | CoD2: 1.3 | #{"Running servers: #{running_servers}" if logged_in?}
+  OS: #{running_os} | Ruby: #{RUBY_VERSION} | Sinatra: #{Sinatra::VERSION} | CoD2: 1.3 #{"| Running servers: #{running_servers}" if logged_in?}
